# notifier

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: Config.c  Config.h  Dirs.c  Dirs.h  DisplayManager.c  DisplayManager.h  GlobalManagers.h  Globals.h  Log.c  Log.h  Main.c  Main.h  Message.c  Message.h  ModuleManager.c  ModuleManager.h  Network.c  Network.h  Paths.c  Paths.h  Stash.c  Stash.h  StringOperations.c  StringOperations.h
src/Displays/: Display.c  Display.h  Dunst.c  Dunst.h  Libnotify.c  Libnotify.h
src/Displays/Utilities/: MessageUtilities.c  MessageUtilities.h
src/FetchingModules/: FetchingModule.c  FetchingModule.h  Github.c  Github.h  HelloWorld.c  HelloWorld.h  Isod.c  Isod.h  Rss.c  Rss.h  Twitch.c  Twitch.h
src/FetchingModules/Extras/: FetchingModuleUtilities.c  FetchingModuleUtilities.h
src/FetchingModules/Utilities/: FetchingModuleUtilities.c  FetchingModuleUtilities.h  Json.c  Json.h  Network.c  Network.h
src/Structures/: BinaryTree.c  BinaryTree.h  Map.c  Map.h  SortedMap.c  SortedMap.h
test/: MapTest.c
test/include/: test.c  test.h
